--- a/index.html
+++ b/index.html
@@ -16,27 +16,15 @@
       <div class="cardbody">
 
         <form>
-
-          <input type="text" name="txNAMA" id="txNAMA" class="txNAMA">
-          <input type="number">
-          <input type="date">
-          <input type="color">
-          <input type="password">
-          <input type="checkbox">Pilih 1
-          <input type="submit" value="Tombol">
-
-          <select>
-            <option>Pilihan 1</option>
-            <option>Pilihan 2</option>
-          </select>
-
-          
-
+          <label>Nilai Panjang</label>     
+            <input type="text" id="PJ">
+          <label>Nilai Lebar</label>
+            <input type="text" id="LB">
         </form>
 
       </div>
       <div class="cardfooter">
-
+        <button class="btn1">Hitung</button>
       </div>
     </div>
   </div>
