--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
 
       </div>
       <div class="cardfooter">
-        <button class="btn1">Hitung</button>
+        <button class="btn1" onclick="hitung()">Hitung</button>
       </div>
     </div>
   </div>
 
+<script>
+  function hitung(){
+    var pj = document.getElementById("PJ").value
+    var lb = document.getElementById("LB").value
+    var luas = pj*lb
+    console.log(luas)
+  }
+</script>
 
 </body>
 </html>
